# carnevil

./: .gitignore  CMakeLists.txt  README.md
recomp_out/funcs/: funcs_30.c  funcs_37.c  funcs_4.c
src/runtime/: dcs_sound.c  dcs_sound.h  func_registration.inc  input.c  input.h  recomp.h  rtos_registration.c  rtos_registration.inc  rtos_scheduler.c  rtos_scheduler.h  rtos_stubs.c  rtos_trampolines.c  rtos_vectors.inc  seattle_overrides.c  seattle_runtime.c  voodoo.c  voodoo.h
tools/: chd_extract.py  seattle_fs.py
